CHANGES
=======

1.9 (unreleased)
----------------

- Added conflict resolution for the PropertyCache and ChildIdCache. This
  hopefully leads to less conflicts.

1.8 (2009-04-07)
----------------

- Connector nows of lock timeouts now (fixes #4914).

1.7 (2009-03-23)
----------------

- CachedResource now returns a read-only property object (fixes #3869).

1.6.5 (2009-03-04)
------------------

- Mock-Connector returns correct getlastmodified.

1.6.4 (2009-01-19)
------------------

- Fixed a bug in child-id cache which led to an invalid list of child ids in
  some circumstances (like with the preview objects).

1.6.3 (never released)
-----------------------

- 1.6.3 was never released because version was accidentally increased to 1.6.4.

1.6.2 (2008-12-12)
------------------

- Resources of null resource locks do not longer have the HTML 404 error
  message as body.
- Mock connector: Existing collections do have a getlastmodified property now.

1.6.1 (2008-11-28)
------------------

- Fixed threading test.

1.6 (2008-11-27)
----------------

- Set the referrer header to the URL the current interaction was created with.

1.5 (2008-11-24)
----------------

- Be smarter when invalidating folders when objects are added or deleted. This
  should lead to much better performance for adds/deletes.

1.4.7 (2008-11-20)
------------------

- No more test extra.
- Functional test layer can be torn down.

1.4.6 (2008-11-19)
------------------

- PropertyCache and ChildNameCache do not write data when the value is
  already stored in the cache. This should lead to fewer conflict errors.

1.4.5 (2008-08-12)
------------------

- Fixed a bug in the body cache which lead to a database write on cache read.

1.4.4 (2008-08-07)
------------------

- The discovery of the cannonical id of a resource does a HEAD request on the
  base url (w/o trailing slash) now. This leads to massively decreased 404's on
  the server.