@@ -1,14 +1,13 @@
 # Copyright (c) 2008 gocept gmbh & co. kg
 # See also LICENSE.txt
-# $Id$
-
-import zope.app.component.hooks
-import zope.app.component
-import zope.app.zopeappgenerations
 
 import zeit.connector.cache
-import zeit.connector.lockinfo
 import zeit.connector.interfaces
+import zeit.connector.invalidator
+import zeit.connector.lockinfo
+import zope.app.component
+import zope.app.component.hooks
+import zope.app.zopeappgenerations
 
 
 def installLocalUtility(root, factory, name, interface, utility_name=u''):
@@ -35,6 +34,10 @@ def install(root):
         site_manager, zeit.connector.lockinfo.LockInfo,
         'connector-lockinfo',
         zeit.connector.interfaces.ILockInfoStorage)
+    installLocalUtility(
+        site_manager, zeit.connector.invalidator.Invalidator,
+        'connector-invalidator',
+        zeit.connector.invalidator.IInvalidator)
 
 
 def evolve(context):
