@@ -7,6 +7,8 @@ CHANGES
 - Added conflict resolution for the PropertyCache and ChildIdCache. This
   hopefully leads to less conflicts.
 
+- Added an invalidtor runner which refreshes the whole property cache.
+
 1.8 (2009-04-07)
 ----------------
 
